--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang = "TH">
-    <head><title>Demo Git</title></head>
+    <head><title>Demo Git!!</title></head>
     <body style="container: center;">
         <h1>Hello World</h1>
-        <h2>1321546</h2>
+       
         <h3>4123123</h3>
+        <p>this is Sample text</p>
     </body>
 </html>
